src/TimeTable lang/parser/TimeTableParser.java
// Generated from TimeTable.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TimeTableParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		WS=18, SL_COMMENT=19, ML_COMMENT=20, ARROW=21, AT=22, BAR=23, COLON=24, 
		COLON_COLON=25, COLON_EQUAL=26, COMMA=27, DOT=28, DOTDOT=29, EQUAL=30, 
		GREATER=31, GREATER_EQUAL=32, HASH=33, LBRACE=34, LBRACK=35, LESS=36, 
		LESS_EQUAL=37, LPAREN=38, MINUS=39, NOT_EQUAL=40, PLUS=41, RBRACE=42, 
		RBRACK=43, RPAREN=44, SEMI=45, SLASH=46, STAR=47, QUESTION=48, RARROW=49, 
		NEQUAL=50, INT=51, STRING=52, ID=53;
	public static final int
		RULE_specification = 0, RULE_resource = 1, RULE_resource_declaration = 2, 
		RULE_relation = 3, RULE_list = 4, RULE_concat = 5, RULE_concat_more = 6, 
		RULE_schedule = 7, RULE_constraint = 8, RULE_type = 9, RULE_declaration = 10, 
		RULE_component_decl = 11, RULE_quant_decl = 12, RULE_in_decl = 13, RULE_with_decl = 14, 
		RULE_not_same = 15, RULE_hours = 16, RULE_quantity = 17, RULE_comparison = 18, 
		RULE_accessor = 19, RULE_component = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"specification", "resource", "resource_declaration", "relation", "list", 
			"concat", "concat_more", "schedule", "constraint", "type", "declaration", 
			"component_decl", "quant_decl", "in_decl", "with_decl", "not_same", "hours", 
			"quantity", "comparison", "accessor", "component"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Specification'", "'Struct'", "'as'", "'Schedule'", "'rule'", 
			"'hard'", "'soft'", "'of'", "'in'", "'and'", "'or'", "'with'", "'for'", 
			"'no'", "'hours'", "'none'", "'zero'", null, null, null, "'->'", "'@'", 
			"'|'", "':'", "'::'", "':='", "','", "'.'", "'..'", "'='", "'>'", "'>='", 
			"'#'", "'{'", "'['", "'<'", "'<='", "'('", "'-'", "'<>'", "'+'", "'}'", 
			"']'", "')'", "';'", "'/'", "'*'", "'?'", "'=>'", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "WS", "SL_COMMENT", "ML_COMMENT", 
			"ARROW", "AT", "BAR", "COLON", "COLON_COLON", "COLON_EQUAL", "COMMA", 
			"DOT", "DOTDOT", "EQUAL", "GREATER", "GREATER_EQUAL", "HASH", "LBRACE", 
			"LBRACK", "LESS", "LESS_EQUAL", "LPAREN", "MINUS", "NOT_EQUAL", "PLUS", 
			"RBRACE", "RBRACK", "RPAREN", "SEMI", "SLASH", "STAR", "QUESTION", "RARROW", 
			"NEQUAL", "INT", "STRING", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TimeTable.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TimeTableParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SpecificationContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(TimeTableParser.COLON, 0); }
		public TerminalNode ID() { return getToken(TimeTableParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(TimeTableParser.LBRACE, 0); }
		public ResourceContext resource() {
			return getRuleContext(ResourceContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(TimeTableParser.RBRACE, 0); }
		public List<ScheduleContext> schedule() {
			return getRuleContexts(ScheduleContext.class);
		}
		public ScheduleContext schedule(int i) {
			return getRuleContext(ScheduleContext.class,i);
		}
		public SpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).enterSpecification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).exitSpecification(this);
		}
	}

	public final SpecificationContext specification() throws RecognitionException {
		SpecificationContext _localctx = new SpecificationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_specification);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(T__0);
			setState(43);
			match(COLON);
			setState(44);
			match(ID);
			setState(45);
			match(LBRACE);
			setState(46);
			resource();
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(47);
				schedule();
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResourceContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(TimeTableParser.COLON, 0); }
		public TerminalNode ID() { return getToken(TimeTableParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(TimeTableParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TimeTableParser.RBRACE, 0); }
		public List<Resource_declarationContext> resource_declaration() {
			return getRuleContexts(Resource_declarationContext.class);
		}
		public Resource_declarationContext resource_declaration(int i) {
			return getRuleContext(Resource_declarationContext.class,i);
		}
		public ResourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resource; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).enterResource(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).exitResource(this);
		}
	}

	public final ResourceContext resource() throws RecognitionException {
		ResourceContext _localctx = new ResourceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_resource);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(T__1);
			setState(56);
			match(COLON);
			setState(57);
			match(ID);
			setState(58);
			match(LBRACE);
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LBRACK || _la==ID) {
				{
				{
				setState(59);
				resource_declaration();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Resource_declarationContext extends ParserRuleContext {
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(TimeTableParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TimeTableParser.ID, i);
		}
		public TerminalNode EQUAL() { return getToken(TimeTableParser.EQUAL, 0); }
		public ConcatContext concat() {
			return getRuleContext(ConcatContext.class,0);
		}
		public TerminalNode LBRACK() { return getToken(TimeTableParser.LBRACK, 0); }
		public List<RelationContext> relation() {
			return getRuleContexts(RelationContext.class);
		}
		public RelationContext relation(int i) {
			return getRuleContext(RelationContext.class,i);
		}
		public List<TerminalNode> RARROW() { return getTokens(TimeTableParser.RARROW); }
		public TerminalNode RARROW(int i) {
			return getToken(TimeTableParser.RARROW, i);
		}
		public TerminalNode RBRACK() { return getToken(TimeTableParser.RBRACK, 0); }
		public List<TerminalNode> COMMA() { return getTokens(TimeTableParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TimeTableParser.COMMA, i);
		}
		public Component_declContext component_decl() {
			return getRuleContext(Component_declContext.class,0);
		}
		public Resource_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resource_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).enterResource_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).exitResource_declaration(this);
		}
	}

	public final Resource_declarationContext resource_declaration() throws RecognitionException {
		Resource_declarationContext _localctx = new Resource_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_resource_declaration);
		int _la;
		try {
			int _alt;
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(67);
					match(ID);
					setState(68);
					match(EQUAL);
					}
				}

				setState(71);
				list();
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(72);
					match(T__2);
					setState(73);
					match(ID);
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				match(ID);
				setState(77);
				match(EQUAL);
				setState(78);
				concat();
				{
				setState(79);
				match(T__2);
				setState(80);
				match(ID);
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(82);
					match(ID);
					setState(83);
					match(EQUAL);
					}
				}

				setState(86);
				match(LBRACK);
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(87);
						relation();
						setState(88);
						match(RARROW);
						setState(89);
						relation();
						setState(90);
						match(COMMA);
						}
						} 
					}
					setState(96);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				setState(97);
				relation();
				setState(98);
				match(RARROW);
				setState(99);
				relation();
				setState(100);
				match(RBRACK);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(102);
				component_decl();
				setState(103);
				match(RARROW);
				setState(104);
				match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(TimeTableParser.LBRACK, 0); }
		public List<TerminalNode> STRING() { return getTokens(TimeTableParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(TimeTableParser.STRING, i);
		}
		public TerminalNode RBRACK() { return getToken(TimeTableParser.RBRACK, 0); }
		public List<Component_declContext> component_decl() {
			return getRuleContexts(Component_declContext.class);
		}
		public Component_declContext component_decl(int i) {
			return getRuleContext(Component_declContext.class,i);
		}
		public TerminalNode LBRACE() { return getToken(TimeTableParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TimeTableParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(TimeTableParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TimeTableParser.COMMA, i);
		}
		public RelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).enterRelation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).exitRelation(this);
		}
	}

	public final RelationContext relation() throws RecognitionException {
		RelationContext _localctx = new RelationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_relation);
		try {
			int _alt;
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				match(LBRACK);
				setState(109);
				match(STRING);
				setState(110);
				match(RBRACK);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				component_decl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(112);
				match(LBRACE);
				setState(117);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(113);
						match(STRING);
						setState(114);
						match(COMMA);
						}
						} 
					}
					setState(119);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				setState(120);
				match(STRING);
				setState(121);
				match(RBRACE);
				}
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				{
				setState(122);
				match(LBRACE);
				setState(128);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(123);
						component_decl();
						setState(124);
						match(COMMA);
						}
						} 
					}
					setState(130);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				setState(131);
				component_decl();
				setState(132);
				match(RBRACE);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(TimeTableParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(TimeTableParser.RBRACK, 0); }
		public List<TerminalNode> STRING() { return getTokens(TimeTableParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(TimeTableParser.STRING, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(TimeTableParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(TimeTableParser.COMMA, i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(LBRACK);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRING) {
				{
				{
				setState(141);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(137);
						match(STRING);
						setState(138);
						match(COMMA);
						}
						} 
					}
					setState(143);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				}
				setState(144);
				match(STRING);
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcatContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TimeTableParser.ID, 0); }
		public Concat_moreContext concat_more() {
			return getRuleContext(Concat_moreContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ConcatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).enterConcat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).exitConcat(this);
		}
	}

	public final ConcatContext concat() throws RecognitionException {
		ConcatContext _localctx = new ConcatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_concat);
		try {
			setState(157);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(152);
				match(ID);
				setState(153);
				concat_more();
				}
				break;
			case LBRACK:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				list();
				setState(155);
				concat_more();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Concat_moreContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(TimeTableParser.PLUS, 0); }
		public ConcatContext concat() {
			return getRuleContext(ConcatContext.class,0);
		}
		public Concat_moreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concat_more; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).enterConcat_more(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).exitConcat_more(this);
		}
	}

	public final Concat_moreContext concat_more() throws RecognitionException {
		Concat_moreContext _localctx = new Concat_moreContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_concat_more);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				match(PLUS);
				setState(160);
				concat();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScheduleContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(TimeTableParser.COLON, 0); }
		public TerminalNode ID() { return getToken(TimeTableParser.ID, 0); }
		public TerminalNode LBRACE() { return getToken(TimeTableParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(TimeTableParser.RBRACE, 0); }
		public List<ConstraintContext> constraint() {
			return getRuleContexts(ConstraintContext.class);
		}
		public ConstraintContext constraint(int i) {
			return getRuleContext(ConstraintContext.class,i);
		}
		public ScheduleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schedule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).enterSchedule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).exitSchedule(this);
		}
	}

	public final ScheduleContext schedule() throws RecognitionException {
		ScheduleContext _localctx = new ScheduleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_schedule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(T__3);
			setState(165);
			match(COLON);
			setState(166);
			match(ID);
			setState(167);
			match(LBRACE);
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6))) != 0)) {
				{
				{
				setState(168);
				constraint();
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(174);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstraintContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TerminalNode ID() { return getToken(TimeTableParser.ID, 0); }
		public TerminalNode COLON() { return getToken(TimeTableParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ConstraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).enterConstraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).exitConstraint(this);
		}
	}

	public final ConstraintContext constraint() throws RecognitionException {
		ConstraintContext _localctx = new ConstraintContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constraint);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5 || _la==T__6) {
				{
				setState(176);
				type();
				}
			}

			setState(179);
			match(T__4);
			setState(180);
			match(ID);
			setState(181);
			match(COLON);
			}
			setState(183);
			declaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TimeTableListener ) ((TimeTableListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
